@@ -1,5 +1,6 @@
 package ru.korshun.cobagsmserver;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -8,8 +9,9 @@ public class Sql {
 
     public Sql() {
         try {
-            Class.forName("com.mysql.jdbc.Driver").newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            Class.forName("com.mysql.jdbc.Driver").getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException |
+                ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         }
     }
